fix pdf linksfor music

--- a/music.html
+++ b/music.html
@@ -561,49 +561,49 @@
                 onclick="playTrack('The%20Echos%20of%20the%20Bells.mid', 'The%20Echos%20of%20the%20Bells.mp3')">
                 The Echos of the Bells
                 <br>
-                <a class="pdf-link" href="/pdfs/The%20Echos%20of%20the%20Bells-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/The%20Echos%20of%20the%20Bells-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('Serene Winter Night.mid', 'Serene Winter Night.mp3')">
                 Serene Winter Night
                 <br>
-                <a class="pdf-link" href="/pdfs/Serene%20Winter%20Night-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Serene%20Winter%20Night-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('A Bright Winter.mid', 'A Bright Winter.mp3')">
                 A Bright Winter
                 <br>
-                <a class="pdf-link" href="/pdfs/A%20Bright%20Winter-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/A%20Bright%20Winter-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('Resonating Magic.mid', 'Resonating Magic.mp3')">
                 Resonating Magic
                 <br>
-                <a class="pdf-link" href="/pdfs/Resonating%20Magic-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Resonating%20Magic-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('Blue Lasers.mid', 'Blue Lasers.mp3')">
                 Neon Lasers
                 <br>
-                <a class="pdf-link" href="/pdfs/Blue%20Lasers-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Blue%20Lasers-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('Defiant Quiet.mid', 'Defiant Quiet.mp3')">
                 Quiet Defiance
                 <br>
-                <a class="pdf-link" href="/pdfs/Defiant%20Quiet-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Defiant%20Quiet-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
             <div class="song-item" onclick="playTrack('Close to the End.mid', 'Close to the End.mp3')">
                 Close to the End
                 <br>
-                <a class="pdf-link" href="/pdfs/Close%20to%20the%20End-Score_and_Parts.pdf" target="_blank">
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Close%20to%20the%20End-Score_and_Parts.pdf" target="_blank">
                     View PDF
                 </a>
             </div>
