--- a/music.html
+++ b/music.html
@@ -607,6 +607,13 @@
                     View PDF
                 </a>
             </div>
+            <div class="song-item" onclick="playTrack('Darkness.mid', 'Darkness.mp3')">
+                Darkness
+                <br>
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Darkness-Score_and_Parts.pdf" target="_blank">
+                    View PDF
+                </a>
+            </div>
             <p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
     </div>
