--- a/test.html
+++ b/test.html
@@ -1,142 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    .marquee {
+        display: flex;
+        overflow: hidden;
+        user-select: none;
+        gap: var(--gap);
+        mask-image: linear-gradient(var(--mask-direction, to right),
+                hsl(0 0% 0% / 0),
+                hsl(0 0% 0% / 1) 20%,
+                hsl(0 0% 0% / 1) 80%,
+                hsl(0 0% 0% / 0));
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sign-In Example</title>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+    .marquee__group {
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        gap: var(--gap);
+        min-width: 100%;
+        animation: scroll-x var(--duration) linear infinite;
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+        .marquee__group {
+            animation-play-state: paused;
+        }
+    }
+
+    .marquee--vertical {
+        --mask-direction: to bottom;
+    }
+
+    .marquee--vertical,
+    .marquee--vertical .marquee__group {
+        flex-direction: column;
+    }
+
+    .marquee--vertical .marquee__group {
+        animation-name: scroll-y;
+    }
+
+    .marquee--reverse .marquee__group {
+        animation-direction: reverse;
+        animation-delay: -3s;
+    }
+
+    @keyframes scroll-x {
+        from {
+            transform: translateX(var(--scroll-start));
         }
 
-        .top-right {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+        to {
+            transform: translateX(var(--scroll-end));
+        }
+    }
+
+    @keyframes scroll-y {
+        from {
+            transform: translateY(var(--scroll-start));
         }
 
-        .profile {
-            background-color: #f0f0f0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            position: relative;
-            cursor: pointer;
+        to {
+            transform: translateY(var(--scroll-end));
         }
+    }
 
-        .profile-dropdown {
-            position: absolute;
-            top: 50px;
-            right: 0;
-            background: white;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            display: none;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* Element styles */
+    .marquee img {
+        display: grid;
+        place-items: center;
+        width: var(--size);
+        padding: calc(var(--size) / 10);
+        border-radius: 0.5rem;
+    }
+
+    .marquee img:hover {
+        transform: scale(1.1);
+    }
+
+
+    /* Parent wrapper */
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: var(--gap);
+        margin: auto;
+        max-width: 100vw;
+        --size: clamp(10rem, 1rem + 40vmin, 30rem);
+        --gap: calc(var(--size) / 14);
+        --duration: 60s;
+        --scroll-start: 0;
+        --scroll-end: calc(-100% - var(--gap));
+    }
+
+
+
+    @keyframes fade {
+        to {
+            opacity: 0;
+            visibility: hidden;
         }
+    }
+</style>
 
-        .profile-dropdown a {
-            text-decoration: none;
-            color: #333;
-            padding: 10px 20px;
-            display: block;
-        }
+<div class="wrapper">
+    <div class="marquee">
+        <div class="marquee__group">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-289.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-331.svg" alt="partner-logo">
 
-        .profile-dropdown a:hover {
-            background-color: #f8f8f8;
-        }
-    </style>
-</head>
+            <img src="https://unlim8ted.com/images/logo/Zipper Line Logo.png" alt="partner-logo">
 
-<body>
+            <img src="https://unlim8ted.com/images/logo/logoipsum-338.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/Bnacintech Industries logo.png" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-346.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-317.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-339.svg" alt="partner-logo">
 
-    <div class="top-right" id="user-control">
-        <!-- Dynamic content will be inserted here -->
+        </div>
+
+        <div aria-hidden="true" class="marquee__group">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-289.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-331.svg" alt="partner-logo">
+
+            <img src="https://unlim8ted.com/images/logo/Zipper Line Logo.png" alt="partner-logo">
+
+            <img src="https://unlim8ted.com/images/logo/logoipsum-338.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/Bnacintech Industries logo.png" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-346.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-317.svg" alt="partner-logo">
+            <img src="https://unlim8ted.com/images/logo/logoipsum-339.svg" alt="partner-logo">
+
+        </div>
     </div>
-
-    <script>
-        let isSignedIn = false; // Initial state
-        let userInfo = null;
-
-        const userControl = document.getElementById('user-control');
-
-        function renderSignInButton() {
-            const signInButton = document.createElement('div');
-            signInButton.id = "g_id_onload";
-            signInButton.dataset.client_id = "657222021545-6cie7sk23lanq2t6oj7t6ijs404nav4g.apps.googleusercontent.com"; // Replace with your Google Client ID
-            signInButton.dataset.context = "signin";
-            signInButton.dataset.callback = "handleCredentialResponse";
-            signInButton.dataset.auto_select = "false";
-
-            userControl.appendChild(signInButton);
-
-            const signInDiv = document.createElement('div');
-            signInDiv.classList.add('g_id_signin');
-            userControl.appendChild(signInDiv);
-        }
-
-        function renderProfileDropdown() {
-            const profileIcon = document.createElement('div');
-            profileIcon.classList.add('profile');
-            profileIcon.style.backgroundImage = `url('${userInfo.picture}')`;
-            profileIcon.style.backgroundSize = "cover";
-
-            const dropdown = document.createElement('div');
-            dropdown.classList.add('profile-dropdown');
-            dropdown.innerHTML = `
-            <a href="#view-profile">View Profile</a>
-            <a href="#settings">Settings</a>
-            <a href="#logout" id="logout">Logout</a>
-        `;
-
-            profileIcon.appendChild(dropdown);
-            userControl.appendChild(profileIcon);
-
-            profileIcon.addEventListener('click', () => {
-                dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-            });
-
-            document.getElementById('logout').addEventListener('click', () => {
-                google.accounts.id.disableAutoSelect();
-                isSignedIn = false;
-                userInfo = null;
-                userControl.innerHTML = '';
-                renderSignInButton();
-            });
-
-            document.addEventListener('click', (event) => {
-                if (!userControl.contains(event.target)) {
-                    dropdown.style.display = 'none';
-                }
-            });
-        }
-
-        window.handleCredentialResponse = (response) => {
-            const jwt = response.credential;
-            const payload = JSON.parse(atob(jwt.split('.')[1]));
-            userInfo = {
-                name: payload.name,
-                email: payload.email,
-                picture: payload.picture
-            };
-
-            isSignedIn = true;
-            userControl.innerHTML = '';
-            renderProfileDropdown();
-        };
-
-        if (!isSignedIn) {
-            renderSignInButton();
-        }
-    </script>
-
-</body>
-
-</html>
+</div>
