add link to images page from products page

--- a/products.html
+++ b/products.html
@@ -672,7 +672,7 @@
                 <p>Read our latest books.</p>
             </a>
             <a href="#games" class="product-box">
-                <img src="https://unlim8ted.com\images\products\games\image.webp" alt="Games">
+                <img src="https://unlim8ted.com\images\products\games\air-hockey-preview.webp" alt="Games">
                 <h2>Games</h2>
                 <p>Play fun and challenging games.</p>
             </a>
@@ -691,6 +691,11 @@
                 <img src="https://unlim8ted.com/images/products/ai/ai icon.png" alt="AI">
                 <h2>AI</h2>
                 <p>Explore our AI products.</p>
+            </a>
+            <a href="images" class="product-box">
+                <img src="https://unlim8ted.com/images/Unlim8tedImages/space with foregroudn.jpg" alt="Images">
+                <h2>Images</h2>
+                <p>Explore some of our best images.</p>
             </a>
             <div>
                 <style>
