--- a/products/images.html
+++ b/products/images.html
@@ -306,54 +306,213 @@
     }
   </style>
   <style>
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    /* Navigation Bar Styles */
+    .navbar {
+        display: flex;
+        justify-content: center;
+        background-color: #333333d0;
+        position: relative;
+        top: 0;
+        width: 100%;
+        z-index: 3;
     }
 
-    .dropdown:hover .dropdown-content {
-      display: block;
+    .nav-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
     }
+
+    .nav-item {
+        position: relative;
+    }
+
+    .nav-item a {
+        display: block;
+        color: white;
+        padding: 14px 20px;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    .nav-item a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 3;
+    }
+    button {
+        padding: 10px;
+        font-size: 1em;
+        background-color: #000000;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+  
+      button:hover {
+        background-color: rgb(57, 200, 145);
+        transform: scale(1.05);
+      }
 
     .dropdown-content a {
-      color: rgb(255, 255, 255);
-      text-decoration: none;
-      padding: 12px 16px;
-      display: block;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
     }
 
     .dropdown-content a:hover {
-      background-color: #2d2849;
+        background-color: #f1f1f1;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+        z-index: 3;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .dropdown-content a {
+        color: black;
+        text-decoration: none;
+        padding: 12px 16px;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
     }
 
     .navbar-toggle {
-      display: none;
-      background-color: #333;
-      color: white;
-      padding: 14px 20px;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
+        display: none;
+        background-color: #333;
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        cursor: pointer;
+        font-size: 18px;
     }
 
     /* Responsive styles */
     @media (max-width: 768px) {
-      .nav-links {
-        flex-direction: column;
-        display: none;
-      }
+        .nav-links {
+            flex-direction: column;
+            display: none;
+        }
 
-      .nav-links.show {
-        display: flex;
-      }
+        .nav-links.show {
+            display: flex;
+        }
 
-      .navbar-toggle {
-        display: block;
-      }
+        .navbar-toggle {
+            display: block;
+        }
     }
-  </style>
+
+    .controls {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #1e1e1e;
+        border-radius: 8px;
+    }
+
+    .controls button {
+        padding: 10px 20px;
+        font-size: 1em;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .controls button:hover {
+        transform: scale(1.05);
+    }
+
+    .controls input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        height: 6px;
+        background: linear-gradient(to right, #007bff, #0056b3);
+        border-radius: 5px;
+        outline: none;
+        cursor: pointer;
+    }
+
+    .controls input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 15px;
+        height: 15px;
+        background: #ffffff;
+        border: 2px solid #007bff;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: transform 0.2s ease;
+    }
+
+    .controls input[type="range"]::-webkit-slider-thumb:hover {
+        transform: scale(1.2);
+    }
+
+    .controls input[type="range"]::-moz-range-thumb {
+        width: 15px;
+        height: 15px;
+        background: #ffffff;
+        border: 2px solid #007bff;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: transform 0.2s ease;
+    }
+
+    .controls input[type="range"]::-moz-range-thumb:hover {
+        transform: scale(1.2);
+    }
+
+    @media (max-width: 600px) {
+        .controls button {
+            padding: 8px 16px;
+            font-size: 0.9em;
+        }
+
+        .controls input[type="range"] {
+            width: 150px;
+        }
+    }
+
+    @media (min-width: 601px) {
+        .controls input[type="range"] {
+            width: 200px;
+        }
+    }
+</style>
   <script>
     function toggleMenu() {
       const navLinks = document.getElementById("navbarLinks");
