update favicon links to be direct links

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
   <meta name="description"
     content="Title: 404 - Page Not Found 404 Unlim8ted. it seems you've found a page that doesn't exist . Learn more at Unlim8ted Studio Productions."
     name="description" />
