--- a/50x.html
+++ b/50x.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
   <meta name="description"
     content="Title: Error. Content: the page you are looking for is currently unavailable . Learn more at Unlim8ted Studio Productions."
     name="description" />
