--- a/buy.html
+++ b/buy.html
@@ -476,7 +476,7 @@
     </div>
     <header>
       <h1>Buy Now</h1>
-      <link rel="icon" href="favicon.ico" type="image/x-icon">
+      <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 
     </header>
 
