--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         content="Get in touch with Unlim8ted Studio Productions for inquiries, support, or collaboration opportunities. We're here to help!">
     <meta property="twitter:image" content="https://unlim8ted.com/images/contact-meta-image.jpg">
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
     <style media="screen" type="text/css">
         .loader {
             position: fixed;
