--- a/customeffectcreator.html
+++ b/customeffectcreator.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Unlim8ted Effect Creator with Keypoints</title>
   <meta name="description"content="Custom Unlim8ted Face effect creator, powered by Unlim8ted Studio Productions."/>
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
   <style>
     body {
       margin: 0;
