--- a/facewarp.html
+++ b/facewarp.html
@@ -6,6 +6,8 @@
   <title>Unlim8ted Face Warp Effects</title>
   <meta name="description"content="Create custom face warp effects with Unlim8ted software. Powered by Unlim8ted Studio Productions. Always free no sign up required."/>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
   <style>
     body {
