--- a/music-generator.html
+++ b/music-generator.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unlim8ted Music Generation</title>
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
     <meta name="description"content="Unlim8ted Procedural music. Free forever no signup required. Powered by Unlim8ted Studio Productions Technology."/>
 </head>
 <body>
