--- a/products/images.html
+++ b/products/images.html
@@ -24,7 +24,7 @@
   <meta name="twitter:title" content="Image Gallery - Unlim8ted Studio Productions">
   <meta name="twitter:description" content="Explore our collection of stunning images showcasing the creativity and innovation of Unlim8ted Studio Productions.">
   <meta name="twitter:image" content="https://unlim8ted.com/images/gallery-preview.jpg">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 
   <!-- Schema.org JSON-LD Structured Data -->
   <script type="application/ld+json">
