--- a/products/physical-items.html
+++ b/products/physical-items.html
@@ -25,7 +25,7 @@
         content="Explore a wide range of products from Unlim8ted Studio Productions, including films, music, games, AI, and more.">
     <meta property="twitter:image" content="https://unlim8ted.com/images/products-meta-image.jpg">
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
     <style media="screen" type="text/css">
         .loader {
             position: fixed;
