--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
   <meta name="description" content="Unlim8ted Physical Items Shop. Powered by Unlim8ted Studio Productions." />
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
