--- a/tools/upload.html
+++ b/tools/upload.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Upload Products to Firebase</title>
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
   <script type="module">
     // Import Firebase SDK
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
