--- a/tos.html
+++ b/tos.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unlim8ted - TOS</title>
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+
   <meta name="description"
     content="'About Us' Unlim8ted Studio Productions is a dynamic entertainment company based in the united states . our mission is to create engaging and innovative experiences across a variety of media . the animated film follows the adventures of a meatball Learn more at Unlim8ted Studio Productions."
     name="description" />
