--- a/air-hockey.html
+++ b/air-hockey.html
@@ -198,7 +198,7 @@
 
     </script>
     <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="styles.css">
     <style>
