--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         content="Stay updated with the latest blogs from Unlim8ted Studio Productions, covering creativity, entertainment, and behind-the-scenes insights.">
     <meta property="twitter:image" content="https://unlim8ted.com/images/blog-meta-image.jpg">
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
     <style media="screen" type="text/css">
         .loader {
             position: fixed;
