--- a/help.html
+++ b/help.html
@@ -26,7 +26,7 @@
         content="Need assistance? Visit our help page to explore FAQs, reach out to our support team, or get in touch for personalized assistance.">
     <meta property="twitter:image" content="https://unlim8ted.com/images/help-meta-image.jpg">
     <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
     <style media="screen" type="text/css">
         .loader {
             position: fixed;
