--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       display: none;
     }
   </style>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="styles.css">
   <style>
