--- a/portfolio.html
+++ b/portfolio.html
@@ -317,7 +317,7 @@
   </script>
   <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
 
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
