--- a/square-pixels.html
+++ b/square-pixels.html
@@ -161,7 +161,7 @@
     height: auto;
   }
 </style>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
 <style media="screen" type="text/css">
   .layer1_class {
