--- a/squareproduct.html
+++ b/squareproduct.html
@@ -497,7 +497,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
 
 </head>
 
