--- a/success.html
+++ b/success.html
@@ -251,7 +251,7 @@
             background-color: #0056b3;
         }
     </style>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
   <style>  
         /* logo */
         .logo {
