--- a/text-generator.html
+++ b/text-generator.html
@@ -201,7 +201,7 @@
   </script>
   <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
   <style>
     /* Additional styles for navigation, dropdown, and responsiveness */
     .dropdown-content {
