--- a/textadventurecreator.html
+++ b/textadventurecreator.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description"content="Unlim8ted Node Based Text Adventure Creator. Free forever no signup required. Powered by Unlim8ted Studio Productions Technology."/>
+  <link rel="icon" href="https://unlim8ted.com/favicon.ico" type="image/x-icon">
+  <meta name="description"content="Unlim8ted Node Based Text Adventure Creator. Free forever no signup required. Powered by Unlim8ted Studio Productions Technology."/>
 
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
