Update profile.html products url

--- a/profile.html
+++ b/profile.html
@@ -397,7 +397,7 @@
     }
 
     function viewProducts() {
-      window.location.href = "https://unlim8ted.com#products"
+      window.location.href = "https://unlim8ted.com/products"
     }
 
     // Add Event Listeners
